TAG: homologyload-tr11886-17
DATE:02/17/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology
1) All configs -  removed references to LOAD_ACCESSION 
2) removed ACCESSION_BCP  from configs where not applicable

TAG: homologyload-tr11886-16
DATE:02/17/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology 
1) hybrid.config.default - new
2) homologyload.sh - factored code out inot runSanityChecks()
     Added bcp of MGI_Property.bcp if it exists
3) homologyload.py - added handling of properties when property attributes
    are configured, factored out init() function
4) preprocessGEISHA.* - removed debug, comments
5) preprocessHGNC.* - removed debug, comments
6) preprocessHomologene.* - removed debug, comments
7) preprocessHybrid.py - added Cluster.toLoadFormat method
    added closeFiles function, removed debug, added handling of properties
8) preprocessZFIN.* - removed debug, comments
9) preprocessHybrid.sh - added, development testing script

TAG: homologyload-tr11886-15
DATE:01/28/2015
STAFF: sc
CHANGES: documenation tweaks
1) zfinload.config.default - replaced www.zfin.org with zfin.org
2) index.html - added geisha as it was forgotten

TAG: homologyload-tr11886-14
DATE:01/20/2015
STAFF: sc
CHANGES: renamed geishaload.config.default go geisha.config.default
and removed some debug from the geisha preprocessor

TAG: homologyload-tr11886-13
DATE:01/20/2015
STAFF: sc
CHANGES: adding geisha
1) Install - updated to loop through all config files and run install
2) common.config.default - commented out MAIL_LOG_CUR - log not being used
3) geisha.config.default - new
4) bin/homologyload.sh - added USAGE
5) bin/preprocessHGNC.py and bin/preprocessZFIN.py - removed class Marker
6) bin/preprocessGEISHA.sh and bin/preprocessGEISHA.py - new

TAG: homologyload-tr11886-12
DATE:
STAFF: sc
CHANGES: 
1) zfinload.config.default - updated cluster source key to correct value

TAG: homologyload-tr11886-11
DATE: 01/12/2015
STAFF: sc
CHANGES: final checkin zfin stuff